# fpcap-python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  wheels.yml
fpcap/: __init__.py
src/: bindings.cpp
tests/: test_fpcap.py
tests/tracefiles/: RICS2021_787__fwscada_20200625_160926.pcap  example.pcap.zst  fritzbox-ip.pcap  fritzbox-ip.pcap.zst  linux-cooked-unsw-nb15.pcap  linux-cooked-unsw-nb15.pcap.zst  pcapng-example.pcapng.zstd
