[build-system]
requires = ["setuptools>=64", "cmake>=3.16", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "fpcap"
version = "0.2.0"
description = "Python bindings for the fpcap C++ packet capture reading library"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: System :: Networking :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/fpcap/fpcap-python"

[tool.setuptools.packages.find]
include = ["fpcap*"]
